--- a/css/query.css
+++ b/css/query.css
@@ -96,26 +96,22 @@
     .panel {
         font-size: 26px;
     }
-    
+
     /* текущий файл под курсором */
     .current-file {
-        background-color: var(--color-transparent);
-        color: white;
+        background-color: rgba(255, 255, 255, 1);
+        filter: invert(1); /* Inverted color for current file selection. */
     }
-    /* делаем иконки под курсом белыми */
-    .current-file a {
-        color: white;
-    }
-    
+
     .file::before, .file-link::before {
         color: rgba(26, 224, 124, 0.56);
         content: '\e80d';
     }
-    
+
     .current-file .file::before, .file-link::before {
         color: white;
     }
-    
+
     /* меняем иконки на шрифтовые */
     .mini-icon {
         color           : rgba(246, 224, 124, 0.56);
